# noteS

./: README.md
backend/: .env  Cargo.toml  notes.db  schema.sql  todos.db
backend/src/: main.rs  todo.rs
client/: package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/: Board.tsx  DropIndicator.jsx
client/src/lib/: api.ts
